# CLI-Anything

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.copilot/skills/: master-terminal.md  shared-conventions.md  worker-terminal.md
.github/: copilot-instructions.md
config/: config.example.yaml
docs/: 00-架构总览.md  01-数据模型.md  02-任务管理器.md  03-存储层.md  04-CLI命令行.md  05-MCP-Server.md  06-Web-Dashboard.md  07-TUI终端界面.md  08-通知系统.md  09-工具模块.md  10-健康检查与测试.md  11-配置与部署.md  Copilot+Qwen+Gemini多终端协同开发指南.md  多终端协同.md
src/cli_anything/: __init__.py  __main__.py  cli.py
src/cli_anything/core/: health_checker.py  models.py  task_manager.py  terminal_manager.py  test_runner.py
src/cli_anything/mcp_server/: server.py
src/cli_anything/notification/: notifier.py
src/cli_anything/storage/: database.py
src/cli_anything/tui/: app.py
src/cli_anything/utils/: config.py  export_import.py  terminal.py
src/cli_anything/web/: dashboard.py
tests/: test_concurrent_tasks.py  test_dag.py  test_dashboard.py  test_features.py  test_judgment_day.py  test_mcp_server.py  test_notifier_integration.py  test_routing.py  test_task_manager.py
